src/test/resources/annotator/UnresolvedOptionReference_CustomOption.proto
syntax = "proto3";

package annotator;

message TestMessage {
    int32 field = 1 [<error descr="Unresolved reference">(unresolved).foo</error> = true];
}